- struct SCIP_Stat has now two additional variables: nprobboundchgs, nprobholechgs; 
  these are used to fix the domain reduction counts in sepa.c, cons.c, branch.c, and prop.c; 
  this means, that now the domain reduction counts are reduced by those domain reduceds which are preformed during probing
- The SoPlex LPI can now write basis files.
- added capabilities to avoid multi-aggregation by setting a corresponding flag (SCIPmarkDoNotMultaggrVar())
- added capabilities to flatten the (multi)-aggregation graph of variables
- the ZPL reader is now able to pass a starting solution to SCIP
- revised lpi_clp.cpp (many small changes, in particular writing and reading of bases)
- added FASTMIP settings in lpi_clp.cpp that try to improve the performance of Clp as much as possible
- added coloring example in examples/Coloring
- added test scripts for testing counting (make testcount)
- allow cut selection based on support of inequality in orthogonality computation
- advanced reading and writing dialog in interactive shell
- replaced tcsh by bash and gawk by awk in all check scripts to achieve higher compatibility

plugins:
- added first version of SOS type 1 constraint handler (cons_sos1.{c,h})
- added first version of SOS type 2 constraint handler (cons_sos2.{c,h})
- less aggressive scaling in linear constraint handler presolve to improve numerics
- added reader for pseudo-Boolean problems (reader_opb.{c,h})
- added first version of constraint handler cons_countsols.{c,h}
- pseudoobj propagator now also propagates the global lower (dual) bound
- linear constraint handler now detects continuous variables that are implicit integer in dual presolve
- the c-MIR separator now also tries to get rid of implicit integer variables by aggregation
- new heuristic DINS (distance induced neighborhood search by Ghosh)
- new presolver boundshift (presol_boundshift.{c,h}); this presolver is currently turned off with default parameter setting